--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link p-3" href="index.html">Bilete tale</a>
                     </li>
                     <li class="nav-item col-12 col-md-auto">
-                        <a class="btn nav-link" href="index.html">Autentificare</a>
+                        <a class="nav-link mx-3 btn" href="index.html">Autentificare</a>
                     </li>
                     <li class="nav-item col-12 col-md-auto">
                         <a class="nav-link p-2 d-flex align-items-center language" href="index.html">
