--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-md fixed-top navbar-light py-3 py-md-2">
+    <header class="navbar navbar-expand-md fixed-top navbar-light">
         <nav class="container-xxl flex-wrap flex-md-nowrap p-0" aria-label="Main navigation">
             <a class="navbar-brand mx-2" href="index.html" aria-label="Bootstrap">
                 <img src="./images/logo-white.svg" alt="Bon Voyage" />
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-2 my-2">
-                        <button type="submit" class="btn w-100 py-2 bg-red cl-white">Cauta</button>
+                        <button type="submit" class="btn w-100 bg-red cl-white">Cauta</button>
                     </div>
                 </div>
             </div>
