--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-md fixed-top navbar-light">
+    <header class="navbar navbar-expand-md navbar-light">
         <nav class="container-xxl flex-wrap flex-md-nowrap p-0" aria-label="Main navigation">
             <a class="navbar-brand mx-2" href="index.html" aria-label="Bootstrap">
                 <img src="./images/logo-white.svg" alt="Bon Voyage" />
