--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
             </div>
         </nav>
     </header>
+
     <main class="home">
         <section class="d-flex align-items-center px-3 intro">
             <div class="container flex-wrap flex-md-nowrap">
                 <h1 class="cl-white my-5">Caută, rezervă, bucură-te de călătorie.</h1>
             </div>
         </section>
-        <section class="d-flex align-items-center mx-3 search">
+        <section class="d-flex align-items-center mx-3 mb-3 search">
             <div class="container flex-wrap flex-md-nowrap p-4 rounded shadow bg-white">
                 <div class="row">
                     <div class="col-6 col-md-6 my-2 d-flex justify-content-start">
@@ -115,66 +116,44 @@
                 </div>
             </div>
         </section>
-    </main>
-    <footer class="d-flex justify-content-between align-items-center">
-        <div class="container-xxl flex-wrap flex-md-nowrap border-top">
-            <div class="row d-flex align-items-center m-0 px-0 py-5">
-                <div class="col-12 col-md-6 pb-3 pb-md-0 position-relative">
-                    <img src="./images/logo.svg" height="40" class="favicon" />
-                    <h1>Work with us</h1>
-                    <div class="d-block py-3">
-                        <h5 class="cl-red py-2">Get in touch</h5>
-                        <h6 class="py-2"><a href="tel:0040742259329">+40 742 259 329</a></h6>
-                        <h6 class="py-2"><a href="mailto:contact@tech-craft.io">contact@tech-craft.io</a></h6>
+        <section class="d-flex align-items-center m-3 info">
+            <div class="container flex-wrap flex-md-nowrap p-5 rounded shadow bg-white">
+                <div class="row width">
+                    <div class="col-12 col-md-12 text-center">
+                        <h6>Fii primul care primește articole, reduceri Bon Voyage și actualizări importante de călătorie, direct în căsuța de e-mail!</h6>
                     </div>
-                    <div class="d-none d-md-block py-3">
-                        <a href="" class="d-inline pr-2">Terms</a>
-                        <a href="" class="d-inline px-2">Privacy</a>
-                        <span class="d-inline px-2">&copy; 2021 Tech Craft</span>
+                    <div class="col-12 col-md-8 my-1">
+                        <div class="input-group">
+                            <span class="input-group-text py-2" id="basic-addon1"><span class="material-icons cl-purple">mail</span></span>
+                            <input type="text" class="form-control py-2" placeholder="Emailul tau" aria-label="Emailul tau" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 my-1">
+                        <button type="submit" class="btn w-100 bg-red cl-white">Aboneaza-te</button>
                     </div>
                 </div>
-                <div class="col-12 col-md-6" id="contactForm">
-                    <form>
-                        <div class="row">
-                            <h4 class="my-2">Contact form</h4>
-                        </div>
-                        <div class="row">
-                            <div class="col my-2">
-                                <input type="text" class="form-control" placeholder="Name" aria-label="Name">
-                            </div>
-                            <div class="col my-2">
-                                <input type="email" class="form-control" placeholder="Email" aria-label="Email">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col my-2">
-                                <input type="text" class="form-control" placeholder="Company Name" aria-label="Company Name">
-                            </div>
-                            <div class="col my-2">
-                                <input type="tel" class="form-control" placeholder="Phone" aria-label="Phone">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col my-2">
-                                <textarea class="form-control" id="FormControlTextarea" placeholder="You can write your message here" rows="3"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col my-2">
-                                <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" value="" id="defaultCheck">
-                                    <label class="form-check-label fw-light fs-6" for="defaultCheck">
-                                        I agree that my personal data to be processed in accordance with the <a href="">GDPR</a>
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col my-2">
-                                <button type="submit" class="btn btn-dark btn-lg w-100">Send this message</button>
-                            </div>
-                        </div>
-                    </form>
+            </div>
+        </section>
+    </main>
+
+    <footer class="d-flex justify-content-between align-items-center mt-5 bg-white">
+        <div class="container-xxl flex-wrap flex-md-nowrap">
+            <div class="row d-flex align-items-center m-0 px-0 py-5">
+                <div class="col-12 col-md-4">
+                    <img src="./images/logo.svg" height="40" class="favicon" />
+                    <button type="submit" class="btn btn-outline-primary my-3">Ai nevoie de ajutor?</button>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h5 class="cl-red py-2">Meniu</h5>
+                    <a href="" class="d-block py-1">Cauta bilet</a>
+                    <a href="" class="d-block py-1">Biletele tale</a>
+                    <a href="" class="d-block py-1">Contul tau</a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h5 class="cl-red py-2">Companie</h5>
+                    <a href="" class="d-block py-1">Termeni si conditii</a>
+                    <a href="" class="d-block py-1">Confidentialitate</a>
+                    <span class="d-block py-1">&copy; 2021 Tech Craft</span>
                 </div>
             </div>
         </div>
