--- a/index.html
+++ b/index.html
@@ -139,18 +139,18 @@
     <footer class="d-flex justify-content-between align-items-center mt-5 bg-white">
         <div class="container-xxl flex-wrap flex-md-nowrap">
             <div class="row d-flex align-items-center m-0 px-0 py-5">
-                <div class="col-12 col-md-4">
-                    <img src="./images/logo.svg" height="40" class="favicon" />
-                    <button type="submit" class="btn btn-outline-primary my-3">Ai nevoie de ajutor?</button>
+                <div class="col-12 col-md-4 my-2">
+                    <img src="./images/logo.svg" height="40" class="favicon d-block" />
+                    <button type="submit" class="btn btn-outline-primary d-block my-3">Ai nevoie de ajutor?</button>
                 </div>
-                <div class="col-12 col-md-4">
-                    <h5 class="cl-red py-2">Meniu</h5>
+                <div class="col-12 col-md-4 my-2">
+                    <h5 class="cl-red">Meniu</h5>
                     <a href="" class="d-block py-1">Cauta bilet</a>
                     <a href="" class="d-block py-1">Biletele tale</a>
                     <a href="" class="d-block py-1">Contul tau</a>
                 </div>
-                <div class="col-12 col-md-4">
-                    <h5 class="cl-red py-2">Companie</h5>
+                <div class="col-12 col-md-4 my-2">
+                    <h5 class="cl-red">Companie</h5>
                     <a href="" class="d-block py-1">Termeni si conditii</a>
                     <a href="" class="d-block py-1">Confidentialitate</a>
                     <span class="d-block py-1">&copy; 2021 Tech Craft</span>
