--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                 </div>
             </div>
         </section>
-        <section class="d-flex align-items-center m-3 info">
-            <div class="container flex-wrap flex-md-nowrap p-5 rounded shadow bg-white">
-                <div class="row width">
+        <section class="d-flex align-items-center m-3 newsletter d-none">
+            <div class="container flex-wrap flex-md-nowrap p-4 rounded shadow bg-white">
+                <div class="row">
                     <div class="col-12 col-md-12 text-center">
-                        <h6>Fii primul care primește articole, reduceri Bon Voyage și actualizări importante de călătorie, direct în căsuța de e-mail!</h6>
+                        <h3>Fii primul care primește articole, reduceri Bon Voyage și actualizări importante de călătorie, direct în căsuța de e-mail!</h3>
                     </div>
                     <div class="col-12 col-md-8 my-1">
                         <div class="input-group">
